--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@testing-library/dom": "^7.30.0",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/user-event": "^12.8.3"
+    "@testing-library/user-event": "^12.8.3",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
