--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
     "eslint": "^7.21.0"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0"
   }
 }
